<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoChop</string>
    <string name="action_settings">Settings</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_my_photos">My Photos</string>
    <string name="title_activity_prueba_view_pager">PruebaViewPagerActivity</string>
    <string name="delete_image">Delete image</string>
    <string name="delete_image_question">Are you sure you want delete the image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_main_action_bar">PhotoChop</string>
    <string name="title_activity_activity_test_fragment">ActivityTestFragment</string>
    <string name="title_activity_image">ImageActivity</string>

    <!-- Drawer -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Drawer items -->
    <string-array name="drawer_main_items">
        <item>Preferences</item>
        <item>About</item>
        <item>Logout</item>
    </string-array>

    <!-- Main floating action buttons -->
    <string name="btn_import_image_title">"Import from gallery"</string>
    <string name="btn_take_photo_title">Take a photo</string>
    <string name="title_activity_image_details">ImageDetailsActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="txt_hide">Hide Image</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_select">Select</string>

    <!-- Sign In / Sign Up -->

    <string name="title_signin">Sign In</string>
    <string name="title_singup">Sign Up</string>
    <string name="facebook_signin">Sign in with Facebook</string>
    <string name="or_conjunction">Or</string>
    <string name="signin">Sign In</string>
    <string name="txt_show">SHOW</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_forgot_pass">Forgot your Password?</string>
    <string name="hint_nick_name">Nickname</string>
    <string name="sign_in_error">Sign In error! Please try again</string>

    <!-- Facebool login -->
    <string name="app_id">566916756778353</string>
    <string name="title_facebook_login">Log In with Facebook</string>
    <string name="user_logout_ok">You are log out!</string>
    <string name="user_logout_error">Ops! There was a problem on logout. Please try again</string>
    <string name="Gallery_title">Select images</string>
    <string name="tv_user_nickname_default">Come on! Login on</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="message_logout_with_no_loggin">You aren\'t login in!</string>
    <string name="txt_hide_pass">HIDE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_address">Address</string>
    <string name="hint_image_name">Image Name</string>
    <string name="txt_error_user_not_logged">Yoy must be logged to hide or show your secret photos!</string>

</resources>
