<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/parent_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/signup_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true">


        <!-- Login Facebook -->
        <RelativeLayout
            android:id="@+id/btn_facebook_login"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_facebook_loggin"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/ivFacebookIco"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_facebook"
                android:layout_marginRight="16dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"/>

            <es.molestudio.photochop.View.AppTextView
                style="@style/AppTextField.ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook_signin"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/ivFacebookIco"/>

        </RelativeLayout>


        <!-- Divider -->
        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">

            <View
                style="@style/Divider"
                android:layout_weight="1">
            </View>

            <es.molestudio.photochop.View.AppTextView
                style="@style/AppTextField.Light.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_conjunction"
                android:textColor="@color/clear_grey"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <View
                style="@style/Divider"
                android:layout_weight="1">
            </View>

        </LinearLayout>


        <!-- Edit text Container -->
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:orientation="vertical">

            <!-- NickName editText -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <es.molestudio.photochop.View.AppEditText
                    android:id="@+id/et_nick_name"
                    style="@style/AppTextField.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="80dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="2dp"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:hint="@string/hint_nick_name"/>

            </RelativeLayout>


            <!-- Email editText -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <es.molestudio.photochop.View.AppEditText
                    android:id="@+id/et_email"
                    style="@style/AppTextField.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="80dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="2dp"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:hint="@string/hint_email"/>


            </RelativeLayout>

            <!-- Password with editText -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <es.molestudio.photochop.View.AppEditText
                    android:id="@+id/et_password"
                    style="@style/AppTextField.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="80dp"
                    android:paddingRight="60dp"
                    android:paddingBottom="2dp"
                    android:inputType="textPassword|textNoSuggestions"/>

                <es.molestudio.photochop.View.AppTextView
                    android:id="@+id/tvShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="7dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignBaseline="@id/et_password"
                    style="@style/AppTextField.Light.Medium"
                    android:text="@string/txt_show"
                    android:textColor="@color/clear_grey"
                    android:gravity="right"/>

            </RelativeLayout>

        </LinearLayout>


        <!-- Sign Up Button -->
        <RelativeLayout
            android:id="@+id/btn_signup"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_app"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp">

            <es.molestudio.photochop.View.AppTextView
                style="@style/AppTextField.ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_singup"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
